# HEEPS

./: .gitignore  ADI_processing.py  LICENSE  README.md  e2e_cdelacroix.py  end_to_end_example.py  example_coronagraph_psf.py  example_multi_cube_abberations.py  example_psf.py  example_vortex_psf.py  generate_full_app_psf.py  pyproject.toml  read_config.py  run_heeps.py  run_sim.py  simulation_config.py
docs/: building_wheels.md
examples/: AO_residuals_cube.py  e2e_propagation.py  end_to_end_example.py  multi_adi_example.py  multi_prop_example.py  set_contributors.py  util_e2e_propagation.py
heeps/: ADI.py  NCPA_application.py  __init__.py  apodization.py  atmosphere.py  circular_apodization.py  coronagraphs.py  detector.py  download_from_gdrive.py  example.py  island_effect_piston.py  lyotstop.py  metis_hci.py  metiscoronagraphsimulator.py  multi_prop.py  multi_prop_script.py  pupil.py  simple_telescope.py  static_ncpa.py  telescope.py  vortex.py  wavefront_abberations.py
input_files/: 1024_pixelsize5mas_petal1_243px.fits  1024_pixelsize5mas_petal2_243px.fits  1024_pixelsize5mas_petal3_243px.fits  1024_pixelsize5mas_petal4_243px.fits  1024_pixelsize5mas_petal5_243px.fits  1024_pixelsize5mas_petal6_243px.fits  ELT_2048_37m_11m_5mas_nospiders_1missing_cut.fits  ELT_2048_37m_11m_5mas_nospiders_2missing_cut.fits  ELT_2048_37m_11m_5mas_nospiders_4missing_cut.fits  ELT_2048_37m_11m_5mas_nospiders_7missing_1_cut.fits  ELT_2048_37m_11m_5mas_nospiders_7missing_cut.fits  ELT_2048_37m_11m_5mas_nospiders_cut.fits  PAVC6_apodization_mask.fits  app_phase_cut.fits  (+1 more)
(+287 files in other folders)
